# geekbot-mcp

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: pypi-release.yml
geekbot_mcp/: config.py  gb_api.py  geekbot_api.py  models.py  prompts.py  server.py
geekbot_mcp/tools/: __init__.py  get_reports.py
tests/: conftest.py  test_geekbot_api.py  test_server.py
